--- a/.github/workflows/installs.yaml
+++ b/.github/workflows/installs.yaml
@@ -33,14 +33,14 @@ jobs:
         run: echo "ENV=CI" >> $GITHUB_ENV
 
       - name: Install brew linux
-        if: matrix.os == "ubuntu-latest"
+        if: matrix.os == ubuntu-latest
         run: sudo apt-get install build-essential procps curl file git
 
       - name: Install brew
         run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
 
       - name: Finish installation on Linux
-        if: matrix.os == "ubuntu-latest"
+        if: matrix.os == ubuntu-latest
         run: |
           test -d ~/.linuxbrew && eval $(~/.linuxbrew/bin/brew shellenv)
           test -d /home/linuxbrew/.linuxbrew && eval $(/home/linuxbrew/.linuxbrew/bin/brew shellenv)
