--- a/.github/workflows/installs.yaml
+++ b/.github/workflows/installs.yaml
@@ -55,5 +55,5 @@ jobs:
           
       - name: Check .Sloth is installed
         run: |
-          brew list gtrabanco/tools/dot --versions
+          brew list gtrabanco/tools/dot
 
